--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
     "name": "Simple_word_count",
     "description": "さっと確認する文字数カウンター",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "manifest_version": 2,
     "browser_action": {
         "default_icon": {
-          "16": "icon.png"
+          "16": "icon16.png",
+          "48": "icon48.png",
+          "128": "icon128.png"
         },
         "default_popup": "input.html"
     },
